--- a/estilos.css
+++ b/estilos.css
@@ -1,12 +1,22 @@
 h1{
 	text-align: center;
 	align-content: center;
+	font-family: sans-serif;
+	font-size: 26px;
 }
 
 p{
 	position: relative;
 	align-content: center;
+	font-family: sans-serif;
+	font-size: 18px;
+	margin: 50px;
 }
 a{
 	color: orange
+}
+img{
+	display: block;
+	margin: auto;
+	height: 175px;
 }
