--- a/docs/DX - DeporteXtremo/css/Style.css
+++ b/docs/DX - DeporteXtremo/css/Style.css
@@ -1,9 +1,51 @@
-body{
-	background-color: grey;
+:root{
+	font-size: 62.5%;
 }
 
-#barraMenu{
-	background-color: black;
-	color: white;
-	font-family: Arial, "sans-serif";
+*{
+	outline: dotted 1px red;
+}
+
+body{
+	background-color: white;
+	font-family: Arial, sans-serif;
+	color: #333;
+	margin: 0;
+}
+
+header{
+	background-color: #333;
+	padding: 2px 20px;
+	vertical-align: middle;
+}
+
+header a, header h1{
+	color: #d9d9d9;
+	display: inline-block;
+}
+
+header h1{
+	margin: 0;
+	font-family: 2rem;
+}
+
+a{
+	text-decoration: none;
+}
+nav{
+	display: inline-block;
+	padding: 5px;
+	height: 29px;
+	margin: 0;
+}
+
+nav ul li{
+	display: inline-block;
+	width: 60px;
+	text-align: center;
+	margin: 0;
+}
+
+img{
+	height: 29px;
 }
