--- a/docs/DX - DeporteXtremo/css/Style.css
+++ b/docs/DX - DeporteXtremo/css/Style.css
@@ -77,6 +77,40 @@ img{
 	padding: 2rem;
 }
 
+.noticia{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: center;
+	padding: 2rem;
+}
+
+.noticia-img{
+	display: inline-block;
+	width: 30%;
+}
+
+.noticia-txt{
+	display: inline-block;
+	width: 60%;
+}
+
+.noticia-txt h3{
+	font-weight: bold;
+	font-size: 2.4rem;
+	padding: 2.5rem 0;
+}
+
+.noticia-txt p{
+	font-size: 1.2rem;
+	padding: 1.5rem 0;
+	line-height: 130%;
+}
+
+.noticia-txt a{
+	color: black;
+}
+
 @keyframes slider {
 	/*INICIO ANIMACION*/
 
