--- a/docs/DX - DeporteXtremo/css/Style.css
+++ b/docs/DX - DeporteXtremo/css/Style.css
@@ -1,11 +1,11 @@
 :root{
 	font-size: 62.5%;
 }
-
+/*
 *{
 	outline: dotted 1px red;
 }
-
+*/
 body{
 	background-color: white;
 	font-family: Arial, sans-serif;
@@ -14,7 +14,8 @@ body{
 	overflow-x: hidden;
 }
 
-header{
+header {
+	display: block;
 	background-color: #333;
 	overflow: auto;
 	padding: 1.5rem;
@@ -24,7 +25,8 @@ header a, header h1{
 	color: #d9d9d9;
 }
 
-header h1{
+/*
+header h1 {
 	font-size: 2.4rem;
 	float: left;
 	font-weight: bold;
@@ -35,20 +37,33 @@ header h1{
 	padding-left: 8rem;
 }
 
+/*
+.navbar-brand #logo h1 {
+	font-size: 2.4rem;
+	float: left;
+	font-weight: bold;
+	padding: .5rem;
+	background-image: url("../img/logo.png");
+	background-repeat: no-repeat;
+	background-position: center left;
+	padding-left: 8rem;
+}
+*/
+
 a{
 	text-decoration: none;
 }
-nav{
+#menu{
 	float: right;
 	font-size: 1.5rem;
 }
-nav li{
+#menu li{
 	display: inline-block;
 	text-align: center;
 	margin: .5rem;
 }
 
-nav li a{
+#menu li a{
 	display: block;
 	padding: .5rem;
 }
